--- a/src/web/css/sanjaal.css
+++ b/src/web/css/sanjaal.css
@@ -91,6 +91,20 @@ img {
     border-radius: 50%;
 }
 
+a:link, a:visited {
+    background-color: #4CAF50; /* Green */
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+
+a:hover, a:active {
+    background-color: red;
+}
+
 @media only screen and (max-width: 500px) {
     body {
         background-color: lightblue;
