--- a/src/web/css/sanjaal.css
+++ b/src/web/css/sanjaal.css
@@ -46,10 +46,14 @@ div {
     transition: 0.3s;
     width: 100%;
     border-radius: 5px;
+    margin:10px;
+    align:center;
+    cursor: pointer;
 }
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    background-color: #ff9800;
 }
 
 img {
@@ -104,6 +108,7 @@ a:link, a:visited {
 a:hover, a:active {
     background-color: red;
 }
+
 
 @media only screen and (max-width: 500px) {
     body {
